--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/server.js",
-    "build": "cross-env NODE_ENV=production webpack",
-    "dev": "concurrently \"cross-env NODE_ENV=development webpack-dev-server --open\" \"cross-env nodemon server/server.js || true\""
+    "build": "npm run build:css && cross-env NODE_ENV=production webpack",
+    "dev": "npm run watch:css && concurrently \"cross-env NODE_ENV=development webpack-dev-server --open\" \"cross-env nodemon server/server.js || true\"",
+    "build:css": "postcss client/styles/tailwind.css -o client/styles/main.css",
+    "watch:css": "postcss client/styles/tailwind.css -o client/styles/main.css"
   },
   "keywords": [],
   "author": "Kenneth Trang",
@@ -16,7 +18,6 @@
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
-    "bootstrap": "^4.3.1",
     "cross-env": "^6.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -45,6 +46,7 @@
     "@babel/core": "^7.7.0",
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.7.0",
+    "autoprefixer": "^10.0.1",
     "babel-loader": "^8.0.6",
     "concurrently": "^5.0.0",
     "css-loader": "^3.2.0",
@@ -58,8 +60,11 @@
     "file-loader": "^4.2.0",
     "http-server": "^0.11.1",
     "nodemon": "^1.19.4",
+    "postcss": "^8.1.1",
+    "postcss-cli": "^8.0.0",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
+    "tailwindcss": "^1.8.12",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0"
