--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
   "author": "Kenneth Trang",
   "license": "MIT",
   "dependencies": {
+    "apollo-server": "^2.18.2",
+    "apollo-server-express": "^2.18.2",
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cross-env": "^6.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "graphql": "^15.3.0",
+    "graphql-tag": "^2.11.0",
     "http": "0.0.0",
     "leaflet": "^1.5.1",
     "mongodb": "^3.3.4",
