Add login & signup form

--- a/package.json
+++ b/package.json
@@ -35,13 +35,12 @@
     "pg": "^7.12.1",
     "popper.js": "^1.16.0",
     "puppeteer": "^2.0.0",
-    "react": "0.0.0-experimental-38dd17ab9",
+    "react": "^16.14.0",
     "react-animate-on-scroll": "^2.1.5",
-    "react-bootstrap": "^1.0.0-beta.14",
-    "react-dom": "0.0.0-experimental-38dd17ab9",
+    "react-dom": "^16.14.0",
     "react-leaflet": "^2.5.0",
-    "react-particles-js": "^2.7.0",
-    "react-router-dom": "^5.1.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "reactstrap": "^8.1.1",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0"
