--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "pg": "^7.12.1",
     "popper.js": "^1.16.0",
     "puppeteer": "^2.0.0",
+    "query-string": "^6.13.6",
     "react": "^16.14.0",
     "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^16.14.0",
