--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "MIT",
   "dependencies": {
     "@apollo/client": "^3.2.4",
+    "@apollo/react-hooks": "^4.0.0",
     "apollo-server": "^2.18.2",
     "apollo-server-express": "^2.18.2",
     "axios": "^0.19.0",
