--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "path": "^0.12.7",
     "pg": "^7.12.1",
     "popper.js": "^1.16.0",
+    "prop-types": "^15.7.2",
     "puppeteer": "^2.0.0",
     "query-string": "^6.13.6",
     "react": "^16.14.0",
